test/good/generics/name03.px

func f<T>() T def
    return "abcd"

func g<T>() T def
    return f().length

print g()
